WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129004
UIProcess needs to know the color of the page's extended background
https://bugs.webkit.org/show_bug.cgi?id=129004
Summary
UIProcess needs to know the color of the page's extended background
Beth Dakin
Reported
2014-02-18 14:50:07 PST
The UIProcess needs to know the color of the page's extended background.
Attachments
Patch
(11.98 KB, patch)
2014-02-18 15:12 PST
,
Beth Dakin
no flags
Details
Formatted Diff
Diff
Patch
(12.03 KB, patch)
2014-02-18 15:47 PST
,
Beth Dakin
bfulgham
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2014-02-18 15:12:14 PST
Created
attachment 224557
[details]
Patch
WebKit Commit Bot
Comment 2
2014-02-18 15:14:46 PST
Attachment 224557
[details]
did not pass style-queue: ERROR: Source/WebKit2/WebProcess/WebCoreSupport/WebChromeClient.cpp:872: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 14 files If any of these errors are false positives, please file a bug against check-webkit-style.
Beth Dakin
Comment 3
2014-02-18 15:47:47 PST
Created
attachment 224561
[details]
Patch Make style bot happy.
Brent Fulgham
Comment 4
2014-02-19 11:24:57 PST
Comment on
attachment 224561
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=224561&action=review
r=me
> Source/WebKit2/ChangeLog:8 > + New method on WKWebView and WKView will return the pageâs extended background
Yuck. Looks like a non-ASCII apostrophe.
> Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:531 > + return [UIColor colorWithRed:(color.red() / 255.0) green:(color.green() / 255.0) blue:(color.blue() / 255.0) alpha:(color.alpha() / 255.0)];
It's too bad we don't have a helper function for this, so that WebCore::Color->UIColor is always done the same way.
Tim Horton
Comment 5
2014-02-19 11:29:32 PST
Comment on
attachment 224561
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=224561&action=review
>> Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:531 >> + return [UIColor colorWithRed:(color.red() / 255.0) green:(color.green() / 255.0) blue:(color.blue() / 255.0) alpha:(color.alpha() / 255.0)]; > > It's too bad we don't have a helper function for this, so that WebCore::Color->UIColor is always done the same way.
We really ought to, similar to the nsColor() one in ColorMac.
Simon Fraser (smfr)
Comment 6
2014-02-19 11:38:16 PST
Comment on
attachment 224561
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=224561&action=review
>>> Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:531 >>> + return [UIColor colorWithRed:(color.red() / 255.0) green:(color.green() / 255.0) blue:(color.blue() / 255.0) alpha:(color.alpha() / 255.0)]; >> >> It's too bad we don't have a helper function for this, so that WebCore::Color->UIColor is always done the same way. > > We really ought to, similar to the nsColor() one in ColorMac.
When this color has alpha, what gets shown underneath?
Simon Fraser (smfr)
Comment 7
2014-02-19 12:36:40 PST
r=me for WK2
Andreas Kling
Comment 8
2014-02-19 12:38:44 PST
Comment on
attachment 224561
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=224561&action=review
> Source/WebCore/rendering/RenderLayerCompositor.cpp:263 > + , m_rootExtendedBackgroundColor(Color())
This line is not needed.
Beth Dakin
Comment 9
2014-02-19 12:43:05 PST
Simon and I talked about the alpha stuff in person.
http://trac.webkit.org/changeset/164382
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug