Source/WebKit2/UIProcess/API/Cocoa/WKViewPrivate.h
@@ -47,6 +47,8 @@
 // Define the inset of the scrollview unusable by the web page.
 @property (nonatomic, setter=_setObscuredInsets:) UIEdgeInsets _obscuredInsets;
 
+- (UIColor *)pageExtendedBackgroundColor;
+
 - (void)_beginInteractiveObscuredInsetsChange;
 - (void)_endInteractiveObscuredInsetsChange;
 
